js and new icons

--- a/index.html
+++ b/index.html
@@ -25,24 +25,42 @@
 	</div>
 	<div class="shapes">
 		<div class="basic_shapes" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
-			<img class="circle" width="7%" height="7%" src="images/circle.svg">
-			<img class='squer' width="7%" height="7%" src="images/squer.svg">
-			<img class='rounded_squer' width="7%" height="7%" src="images/rounded_squer.svg">
-			<img class='polygon_6' width="7%" height="7%" src="images/polygon_6.svg">
-			<img class='polygon_8' width="7%" height="7%" src="images/polygon_8.svg">
-			<img class='triangle' width="7%" height="7%" src="images/triangle.svg">
-			<img class='line' width="7%" height="7%" src="images/line.svg">
-			<img class='arrow' width="7%" height="7%" src="images/arrow.svg">
-			<img class='arrow_2' width="7%" height="7%" src="images/arrow_2.svg">
-			<img class="minus" width="7%" height="7%" src="images/minus.svg">
-			<img class='plus' width="7%" height="7%" src="images/plus.svg">
-			<img class='tick' width="7%" height="7%" src="images/tick.svg">
-			<img class='cloud' width="7%" height="7%" src="images/cloud.svg">
-			<img class='drop' width="7%" height="7%" src="images/drop.svg">
-			<img class='sun' width="7%" height="7%" src="images/sun.svg">
-			<img class='star' width="7%" height="7%" src="images/star.svg">
-			<img class='hart' width="7%" height="7%" src="images/hart.svg">
-		</div>
+				<img class="circle" width="7%" height="7%" src="images/circle.svg">
+				<img class='squer' width="7%" height="7%" src="images/squer.svg">
+				<img class='rounded_squer' width="7%" height="7%" src="images/rounded_squer.svg">
+				<img class='polygon_6' width="7%" height="7%" src="images/polygon_6.svg">
+				<img class='polygon_8' width="7%" height="7%" src="images/polygon_8.svg">
+				<img class='triangle' width="7%" height="7%" src="images/triangle.svg">
+				<img class='line' width="7%" height="7%" src="images/line.svg">
+				<img class='arrow' width="7%" height="7%" src="images/arrow.svg">
+				<img class='arrow_2' width="7%" height="7%" src="images/arrow_2.svg">
+				<img class="minus" width="7%" height="7%" src="images/minus.svg">
+				<img class='plus' width="7%" height="7%" src="images/plus.svg">
+				<img class='tick' width="7%" height="7%" src="images/tick.svg">
+				<img class='flag' width="7%" height="7%" src="images/flag.svg">
+			</div>			
+			<div class="nature" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
+				<img class='cloud' width="7%" height="7%" src="images/cloud.svg">
+				<img class='drop' width="7%" height="7%" src="images/drop.svg">
+				<img class='sun' width="7%" height="7%" src="images/sun.svg">
+				<img class='star' width="7%" height="7%" src="images/star.svg">
+				<img class='star6' width="7%" height="7%" src="images/star6.svg">
+				<img class='hart' width="7%" height="7%" src="images/hart.svg">
+			</div>
+			<div class="office" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
+				<img class='talk1' width="7%" height="7%" src="images/talk1.svg">
+				<img class='talk2' width="7%" height="7%" src="images/talk2.svg">
+				<img class='talk3' width="7%" height="7%" src="images/talk3.svg">
+				<img class='folder' width="7%" height="7%" src="images/folder.svg">
+			</div>
+			<div class="tools" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
+				<img class='wrench' width="7%" height="7%" src="images/wrench.svg">
+				<img class='loupe' width="7%" height="7%" src="images/loupe.svg">
+				<img class='key' width="7%" height="7%" src="images/key.svg">
+				<img class='hema' width="7%" height="7%" src="images/hema.svg">
+				<img class='gear' width="7%" height="7%" src="images/gear.svg">
+				<img class='gear2' width="7%" height="7%" src="images/gear2.svg">
+			</div>
 	</div>
 </section>
 <section class="main">
