--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 				<img class='plus' width="7%" height="7%" src="images/plus.svg">
 				<img class='tick' width="7%" height="7%" src="images/tick.svg">
 				<img class='flag' width="7%" height="7%" src="images/flag.svg">
-			</div>			
-			<div class="nature" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
+			<!-- </div>			
+			<div class="nature" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'> -->
 				<img class='cloud' width="7%" height="7%" src="images/cloud.svg">
 				<img class='drop' width="7%" height="7%" src="images/drop.svg">
 				<img class='sun' width="7%" height="7%" src="images/sun.svg">
 				<img class='star' width="7%" height="7%" src="images/star.svg">
 				<img class='star6' width="7%" height="7%" src="images/star6.svg">
 				<img class='hart' width="7%" height="7%" src="images/hart.svg">
-			</div>
-			<div class="office" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
+			<!-- </div>
+			<div class="office" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'> -->
 				<img class='talk1' width="7%" height="7%" src="images/talk1.svg">
 				<img class='talk2' width="7%" height="7%" src="images/talk2.svg">
 				<img class='talk3' width="7%" height="7%" src="images/talk3.svg">
 				<img class='folder' width="7%" height="7%" src="images/folder.svg">
-			</div>
-			<div class="tools" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'>
+			<!-- </div>
+			<div class="tools" data-slick='{"slidesToShow": 9, "slidesToScroll": 9}'> -->
 				<img class='wrench' width="7%" height="7%" src="images/wrench.svg">
 				<img class='loupe' width="7%" height="7%" src="images/loupe.svg">
 				<img class='key' width="7%" height="7%" src="images/key.svg">
